# eincalc

./: '  .gitattributes  .gitignore  .ocamlinit  LICENSE-Apache-2.0  README.md  WEB.md  cover.sh  dune-project  eincalc.install  eincalc.opam  spinal.install  spinal.opam
lib/: _grammar.txt  channels.ml  dune  emitter.ml  eval.ml  funcs.ml  genfunc.ml  grammar.txt  lexer.ml  masks.ml  ndarray.ml  ndcontroller.ml  ndmodel.ml  ndview.ml  parser.ml  planner.ml  plotter.ml  repl.ml  tokens.ml  types.ml
test/: dune  test_eincalc_eval.ml  test_eincalc_genfunc.ml  test_eincalc_lexer.ml  test_eincalc_ndarray.ml  test_eincalc_ndview.ml  test_eincalc_parser.ml  test_spinal_eval.ml  test_spinal_genfunc.ml  test_spinal_lexer.ml  test_spinal_ndarray.ml  test_spinal_parser.ml
