(library
 (name eincalc)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))
 (libraries unix fungi)
 (modules tokens lexer parser eval repl genfunc ndarray emitter 
          ndcontroller ndview planner types funcs ndmodel masks plotter)
 (instrumentation (backend bisect_ppx)))
 (env
   (release
     (flags (:standard -noassert))))
