(test
  (name test_eincalc_lexer)
  (modules test_eincalc_lexer)
  (libraries eincalc ounit2)
)

(test
  (name test_eincalc_parser)
  (modules test_eincalc_parser)
  (libraries eincalc ounit2)
)

(test
  (name test_eincalc_eval)
  (modules test_eincalc_eval)
  (libraries eincalc ounit2)
)

(test
  (name test_eincalc_genfunc)
  (modules test_eincalc_genfunc)
  (libraries eincalc ounit2)
)

(test
  (name test_eincalc_ndarray)
  (modules test_eincalc_ndarray)
  (libraries eincalc ounit2)
)

(test
  (name test_eincalc_ndview)
  (modules test_eincalc_ndview)
  (libraries eincalc ounit2)
)
